# modular-infer-platform

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODOList.md  build_project.sh
src/: CMakeLists.txt  Platform.cpp
src/Config/: CMakeLists.txt  ConfigBase.h  ConfigCSV.cpp  ConfigCSV.h  ConfigManager.cpp  ConfigManager.h
src/ModelInfer/: BaseInfer.h  CMakeLists.txt  InferManager.cpp  InferManager.h  ONNXInfer.cpp  ONNXInfer.h
src/My_Own_Task/: CMakeLists.txt
src/My_Own_Task/TaskTest/: TaskTest.cpp  TaskTest.h
src/My_Task/: CMakeLists.txt
src/My_Task/ConfigTask/: ConfigTask.cpp  ConfigTask.h
src/My_Task/ConfigTask/config/: test.csv
src/My_Task/ONNXTask/: ONNXTask.cpp  ONNXTask.h
src/My_Task/ONNXTask/config/: config.csv
src/My_Task/PostProcessTask/: PostProcessTask.cpp  PostProcessTask.h
src/My_Task/PostProcessTask/config/: config.csv
src/My_Task/PreProcessTask/: PreProcessTask.cpp  PreProcessTask.h
src/My_Task/PreProcessTask/config/: config.csv
src/My_Task/TaskTest/: TaskTest.cpp  TaskTest.h
src/PostProcess/: BasePostProcess.h  CMakeLists.txt  PostProcessMan.cpp  PostProcessMan.h  YoloPostProcess.cpp  YoloPostProcess.h
src/PreProcess/: CMakeLists.txt  PreProcess.cpp  PreProcess.h  PreProcessMan.cpp  PreProcessMan.h
src/Task/: CMakeLists.txt  Task.cpp  Task.h  TaskBase.h
